# sphinx

./: .gitignore  README.rst  context.py  directives.py  emulator.py  errors.py  expressions.py  memory.py  parser.py  program.py  setup.cfg
examples/: big_loop.s  branch_table.s  count.s  countdown.s  decimal.s  factor.s  halt_propagation.s  halting.s  hello_world.s  max.s  max_cli.s  prime.s  prime_loop.s  sat.s  self_inquiry.s  sphinxfuck.s  sum.s
examples/brainfuck/: README.rst  cat.b.s  cell.b.s  hello.b.s  loop.b  loop.b.s  to_sphinx.py  to_sphinxfuck.py
spasm/: __main__.py  context.py  directives.py  emulator.py  errors.py  expressions.py  memory.py  parser.py  program.py
tests/: test_emulator.py  test_parser.py
