[metadata]
name = sphinx-emulator
version = 0.1.0
author = Ben Burrill
author_email = bburrill98@gmail.com
description = Assembler/emulator for the conditional-halt based Sphinx ISA
long_description = README.rst
license_file = LICENSE
classifiers =
    Topic :: System :: Emulators
    Topic :: Software Development :: Assemblers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
python_requires = >=3.10
packages = spasm

[options.entry_points]
console_scripts =
    spasm = spasm.__main__:main

[tox:tox]
min_version = 4.0

[testenv]
deps =
    pytest
    coverage
commands =
    coverage run --branch --source spasm -m pytest tests
    coverage report
    coverage html
